--- a/projetos pequenos/6-interação.html
+++ b/projetos pequenos/6-interação.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,15 +13,24 @@
     </style>
 </head>
 <body>
-    <div id="container">
-        <h1 id="text">{{nome}}</h1>
-        <input type="text" v-model="nome">
+    <div id="app-6">
+        <p>{{mensage}}</p>
+        <input type="text" v-model='mensage'>
     </div>
-
-
-
-
+    
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-    <script src="main.js"></script>
+    <script>
+        const app = new Vue({
+           el: '#app-6',
+           data:{
+               mensage: 'Hello World'
+            }
+        })
+
+    </script>
+
+
+
+
 </body>
 </html>
